# AI1_Project

./: times
Robot/code/org.lejos.SokobanRobot/: .project  README.md  build.properties  build.xml
Robot/code/org.lejos.SokobanRobot/src/org/lejos/SokobanRobot/: AdjustLeft.java  AdjustRight.java  BlueToothCom.java  Box_Type.java  CrossSectionDetector.java  DecisionMaker.java  Direction.java  DriveForward.java  LightSensor_Access.java  RunningAverage.java  Settings.java  SokobanBoard.java  SokobanField.java  SokobanRobot.java  Turn.java
Robot/code/org.lejos.SokobanRobot/tools/: Reader.py
Sokoban_Solver/: .clang_complete  CMakeLists.txt  TODO
Sokoban_Solver/SokobanSolver/: CMakeLists.txt
Sokoban_Solver/SokobanSolver/headers/: DeadLockDetector.hpp  Sokoban_Board.hpp  Sokoban_Box.hpp  Sokoban_Move.hpp  Solver.hpp  TransmutationTable.hpp  TunnelMacroCreator.hpp  enums.hpp
Sokoban_Solver/SokobanSolver/sources/: CMakeLists.txt  DeadLockDetector.cpp  Sokoban_Board.cpp  Sokoban_Box.cpp  Sokoban_Move.cpp  Sokoban_Solver.cpp  Solver.cpp  TransmutationTable.cpp  TunnelMacroCreator.cpp
stuff/: .~lock.times.ods#  times.ods
