CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

set (SOKOBANSOLVER_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set (SOKOBANSOLVER_HEADERDIR "${SOKOBANSOLVER_DIR}/headers")
set (SOKOBANSOLVER_HEADERS ${SOKOBANSOLVER_HEADERDIR}/Sokoban_Box.hpp)
set (SOKOBANSOLVER_HEADERS ${SOKOBANSOLVER_HEADERS} ${SOKOBANSOLVER_HEADERDIR}/Sokoban_Board.hpp)
set (SOKOBANSOLVER_HEADERS ${SOKOBANSOLVER_HEADERS} ${SOKOBANSOLVER_HEADERDIR}/Solver.hpp)

include_directories(${SOKOBANSOLVER_HEADERDIR})
add_subdirectory("sources")

